# nfl-analytics

./: .gitignore  pyproject.toml
nfl_analytics/: __init__.py  _local_storage.py  datastore.py  nfl_data.py  ratings_srs.py  srs.py  srs_model.py  utils.py
nfl_analytics/nfl_data/: __init__.py  _source_data.py  advanced_data.py  basic_data.py  sourcing.py  transform.py  utils.py
report/: report.tex
test/: test_datastore.py  test_local_storage.py  test_nfl_data.py  test_ratings_srs.py  test_srs.py  test_srs_model.py  test_utils.py
test/test_nfl_data/: test_advanced_data.py  test_basic_data.py  test_sourcing.py  test_transform.py  test_utils.py
